# Slowformer

./: README.md
slowformer/: pyproject.toml
slowformer/slowformer/: decoder.py  encoder.py  transformer_model.py
slowformer/slowformer/functional_layers/: cross_attention.py  feed_forward_network.py  multihead_attention.py  self_attention.py
slowformer/slowformer/functional_layers/positional_embeddings/: sinusoidal_embedding.py
