[tool.poetry]
name = "slowformer"
version = "0.1.0"
description = ""
authors = ["Manikanta Loya <mani.4272@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
